--- a/Osu-JS/index.html
+++ b/Osu-JS/index.html
@@ -6,6 +6,7 @@
 
     <script src="p5.js"></script>
     <script src="main.js"></script>
+    <script src="mapController.js"></script>
 
     <style>
         body {
