added all libraries

--- a/Osu-JS/index.html
+++ b/Osu-JS/index.html
@@ -2,11 +2,17 @@
 <html>
 
 <head>
-    <title>bleh</title>
+    <title>Osu-JS</title>
 
     <script src="p5.js"></script>
     <script src="main.js"></script>
     <script src="mapController.js"></script>
+    <script src="p5.collide2d.js"></script>
+    <script src="p5.dom.js"></script>
+    <script src="p5.gui.js"></script>
+    <script src="p5.play.js"></script>
+    <script src="p5.sound.js"></script>
+    <script src="quicksettings.js"></script>
 
     <style>
         body {
