--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <title>Osu-JS</title>
-    
-    <script src="p5.js" type="text/javascript"></script>
-    <script src="quicksettings.js" type="text/javascript"></script>
-    <script src="p5.gui.js" type="text/javascript"></script>
+
+    <script src="libraries/p5.js" type="text/javascript"></script>
+    <script src="libraries/quicksettings.js" type="text/javascript"></script>
+    <script src="libraries/p5.gui.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
     <script src="mapController.js"></script>
-    <script src="p5.collide2d.js"></script>
-    <script src="p5.dom.js"></script>
-    <script src="p5.play.js"></script>
-    <script src="p5.sound.js"></script>
-    <script src="dat.gui.js"></script>
+    <script src="libraries/p5.collide2d.js"></script>
+    <script src="libraries/p5.dom.js"></script>
+    <script src="libraries/p5.play.js"></script>
+    <script src="libraries/p5.sound.js"></script>
+    <script src="libraries/dat.gui.js"></script>
 
 
     <style>
