--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="libraries/p5.gui.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
     <script src="mapController.js"></script>
+    <script src="gui.js"></script>
     <script src="libraries/p5.collide2d.js"></script>
     <script src="libraries/p5.dom.js"></script>
     <script src="libraries/p5.play.js"></script>
