--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         body {
             text-align: center;
             background-color: grey;
+            margin: 0;
+
+        }
+        canvas{
+          vertical-align: top;;
         }
     </style>
 </head>
